--- a/apps/html/index.html
+++ b/apps/html/index.html
@@ -6,8 +6,23 @@
 
 </head>
 <body>
-<div id="attribution"></div>
-<div id="map"></div>
+
+<section>
+
+    <div id="sidebar">
+        
+        <div id="search-container">
+            <input/>
+        </div>
+
+
+    </div>
+    <div id="main">
+        <div id="attribution"></div>
+        <div id="map"></div>
+    </div>
+
+</section>
 
 <script src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
 <script src="../../node_modules/cesium/Build/Cesium/Cesium.js"></script>
@@ -38,50 +53,6 @@ var config = {
     navigationHelpButton: false,
     creditContainer: 'attribution'
 }
-var viewer = new Cesium.Viewer('map', config);
-
-
-var imageryLayers = viewer.imageryLayers;
-
-
-var imageryLayers = viewer.imageryLayers;
-console.log(imageryLayers);
-
-function addWmts() {
-    var url='http://gridwms.nve.no/wms_server/wms_server.aspx?request=getcapabilities&srs=4326'; //Geoserver URL
-    var layers = viewer.scene.globe.imageryLayers;
-        layers.removeAll();
-        layers.addImageryProvider(new Cesium.WebMapServiceImageryProvider({
-            url : url,        
-            layers: 'GIS_Demo'// Here just give layer name
-        }));
-}
-
-// addWmts();
-
-function addWms() {
-
-    var wmsLayer = new Cesium.ImageryLayer(new Cesium.WebMapServiceImageryProvider({
-                parameters : {TRANSPARENT: true, format:'png'},
-                url: 'http://gridwms.nve.no/wms_server/wms_server.aspx',
-                layers: 'sdfsw'
-            }));
-    viewer.scene.imageryLayers.add(wmsLayer);
-}
-addWms();
-
-function removeWms(id) {
-    // viewer.getLayers(id).remove();
-    console.log("removing " + id);
-}
-
-
-function removeWmts(id) {
-    // viewer.getLayers(id).remove();
-    console.log("removing " + id);
-
-}
-
 
 
 
@@ -97,7 +68,7 @@ function removeWmts(id) {
 // })
 
 </script>
-
+<!-- <script src="app.js"></script> -->
 
 </body>
 </html>
