--- a/apps/html/index.html
+++ b/apps/html/index.html
@@ -3,6 +3,9 @@
 
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" type="text/css" href="../../node_modules/cesium/Build/Cesium/Widgets/widgets.css">
+      
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css">
 
 </head>
 <body>
@@ -24,6 +27,8 @@
 
 </section>
 
+  <!-- Compiled and minified JavaScript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
 <script src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
 <script src="../../node_modules/cesium/Build/Cesium/Cesium.js"></script>
 
