--- a/apps/html/index.html
+++ b/apps/html/index.html
@@ -31,10 +31,11 @@
   <!-- Compiled and minified JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
 <script src="../../node_modules/cesium/Build/CesiumUnminified/Cesium.js"></script>
+<script src="config.js"></script>
 
 
 <script>
-var config = {
+var csConfig = {
     timeline: false, 
     baseLayerPicker: false, 
     geocoder : false, 
