--- a/apps/html/index.html
+++ b/apps/html/index.html
@@ -35,30 +35,30 @@
 
 
 <script>
-var csConfig = {
-    timeline: false, 
-    baseLayerPicker: false, 
-    geocoder : false, 
-    animation: false,
-    orderIndependentTranslucency: false,
-    skyBox: new Cesium.SkyBox({
-      sources : {
-        positiveX : 'skybox_px.png',
-        negativeX : 'skybox_nx.png',
-        positiveY : 'skybox_py.png',
-        negativeY : 'skybox_ny.png',
-        positiveZ : 'skybox_pz.png',
-        negativeZ : 'skybox_nz.png'
-      }, show: false
-    }),
-    fullscreenButton: false,
-    babseLayerPicker: false,
-    infoBox: false,
-    homeButton:false,
-    sceneModePicker:false,
-    navigationHelpButton: false,
-    creditContainer: 'attribution'
-}
+// var csConfig = {
+//     timeline: false, 
+//     baseLayerPicker: false, 
+//     geocoder : false, 
+//     animation: false,
+//     orderIndependentTranslucency: false,
+//     skyBox: new Cesium.SkyBox({
+//       sources : {
+//         positiveX : 'skybox_px.png',
+//         negativeX : 'skybox_nx.png',
+//         positiveY : 'skybox_py.png',
+//         negativeY : 'skybox_ny.png',
+//         positiveZ : 'skybox_pz.png',
+//         negativeZ : 'skybox_nz.png'
+//       }, show: false
+//     }),
+//     fullscreenButton: false,
+//     babseLayerPicker: false,
+//     infoBox: false,
+//     homeButton:false,
+//     sceneModePicker:false,
+//     navigationHelpButton: false,
+//     creditContainer: 'attribution'
+// }
 
 // var k = _.template()
 
